@@ -715,7 +715,7 @@ class CConfigurationExport {
 			$db_applications = API::Application()->get([
 				'output' => ['name'],
 				'applicationids' => array_keys($applicationids),
-				'inherited' => false,
+				'inherited' => true,
 				'preservekeys' => true
 			]);
 		}
