@@ -747,12 +747,12 @@ function get_dbid($table, $field) {
 }
 
 function zbx_db_distinct($sql_parts) {
-	if (count($sql_parts['from']) > 1) {
-		return ' DISTINCT ';
+	$count = count($sql_parts['from']);
+	if (array_key_exists('left_join', $sql_parts)) {
+		$count += count($sql_parts['left_join']);
 	}
-	else {
-		return ' ';
-	}
+
+	return ($count > 1 ? ' DISTINCT' : '');
 }
 
 function zbx_db_search($table, $options, &$sql_parts) {
