@@ -527,6 +527,9 @@ else {
 
 	$options = [
 		'output' => ['maintenanceid', $sortField],
+		'search' => [
+			'name' => ($filter['name'] === '') ? null : $filter['name']
+		],
 		'editable' => true,
 		'sortfield' => $sortField,
 		'limit' => $config['search_limit'] + 1
@@ -550,10 +553,7 @@ else {
 
 	// get list of maintenances
 	$data['maintenances'] = API::Maintenance()->get([
-		'output' => API_OUTPUT_EXTEND,
-		'search' => [
-			'name' => ($filter['name'] === '') ? null : $filter['name']
-		],
+		'output' => ['maintenanceid', 'name', 'maintenance_type', 'active_since', 'active_till', 'description'],
 		'maintenanceids' => zbx_objectValues($data['maintenances'], 'maintenanceid')
 	]);
 
